--- a/src/components/TodoTemplate.scss
+++ b/src/components/TodoTemplate.scss
@@ -6,7 +6,7 @@
   border-radius: 4px;
   overflow: hidden;
   .app-title {
-    background: #1e3c6a;
+    background: #4751b1;
     color: white;
     height: 4rem;
     font-size: 1.5rem;
