[TDA-11] App component todos state 사용

--- a/src/components/TodoListItem.scss
+++ b/src/components/TodoListItem.scss
@@ -22,7 +22,7 @@
     }
     &.checked {
       svg {
-        color: #22b8cf;
+        color: #4c52ad;
       }
       .text {
         color: #adb6bd;
